<?xml version="1.0" encoding="utf-8"?>
<!-- @author Angel Paunchev (S1105400) -->
<resources>
    <string name="app_name">Traffic Scotland</string>
    <string name="action_settings">Settings</string>
    <string name="planned_roadworks">Planned roadworks</string>
    <string name="current_roadworks">Current roadworks</string>
    <string name="choose_date">Choose date</string>
    <string name="roadwork_details">Roadwork details</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="additional_info">Additional information</string>
    <string name="filter">Filter</string>
    <string name="filter_by_road">Filter by road</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="road_name">Road name</string>
    <string name="road_name_eg">Road name (e.g. A82)</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="progress">Progress</string>
    <string name="time_remaining">Days until completed</string>
    <string name="days_from_today">day(s) from today</string>
    <string name="update_feed">Update feed</string>
    <string name="reset_all_filters">Reset all filters</string>
    <string name="about">About</string>
    <string name="about_content">The roadwork indicator represents visual feedback on how long
        until a roadwork will be completed: green for within a week, orange for within a month,
        and red for any longer.\n\nDeveloped by: Angel Paunchev (S1105400)</string>
</resources>
