<?xml version="1.0" encoding="utf-8"?>
<!-- @author Angel Paunchev (S1105400) -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <TextView 
	    android:id="@+id/titleTv"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="22sp"
	    android:layout_marginBottom="15sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginBottom="15sp">
		<TextView 
		    android:id="@+id/startDateLbl"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		   	android:text="@string/start_date"
		   	android:textSize="14sp"
		   	android:textColor="#666"
		   	android:textAllCaps="true" />
		
		<TextView 
		    android:id="@+id/startDateTv"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="16sp" />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginBottom="15dp">
		<TextView 
		    android:id="@+id/endDateLbl"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		   	android:text="@string/end_date"
		   	android:textSize="14sp"
		   	android:textColor="#666"
		   	android:textAllCaps="true" />
		
		<TextView 
		    android:id="@+id/endDateTv"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="16sp" />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginBottom="15dp">
		<TextView 
		    android:id="@+id/timeRemainingLbl"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		   	android:text="@string/time_remaining"
		   	android:textSize="14sp"
		   	android:textColor="#666"
		   	android:textAllCaps="true" />
		
		<TextView 
		    android:id="@+id/timeRemainingTv"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="16sp" />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginBottom="15dp">
		<TextView 
		    android:id="@+id/progressLbl"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		   	android:text="@string/progress"
		   	android:textSize="14sp"
		   	android:textColor="#666"
		   	android:textAllCaps="true" />
		
		<ProgressBar
		    android:id="@+id/progressBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="?android:attr/progressBarStyleHorizontal" />
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
		<TextView 
		    android:id="@+id/infoLbl"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		   	android:text="@string/additional_info"
		   	android:textSize="14sp"
		   	android:textColor="#666"
		   	android:textAllCaps="true" />
		
		<TextView 
		    android:id="@+id/infoTv"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="16sp" />
	</LinearLayout>
    
</LinearLayout>
